--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: ci
 on:
   push:
     branches:
-      - main
-#  schedule:
-#    - cron: "0 0 * * *"
+      - mai
+  schedule:
+   - cron: "15 1 * * *"
 
 jobs:
   autogreen:
@@ -24,5 +24,5 @@ jobs:
           git config --local user.name "${{ github.actor }}"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
-          git commit --allow-empty -m "a commit a day keeps your girlfriend away"
+          git commit --allow-empty -m "There's no place like 127.0.0.1"
           git push
